# language_model_rl

./: README.md  countdown_heldout_prompts.json  countdown_outputs.json  countdown_outputs.jsonl  countdown_outputs_hard.json  countdown_outputs_hard_rl.json  countdown_outputs_hard_rl_best.json  countdown_outputs_rl.json  countdown_warmstart_cot_100.json  countdown_warmstart_cot_100_improved.json  pyproject.toml  smoltalk_dataloader.py  synthetic_examples.json  synthetic_examples_to_fill.json  synthetic_rloo.json  train_sft.py
rl_sft/: common.py  curriculum.py  dataloader.py  eval_countdown.py  eval_pipeline.py  generate_examples.py  inspect_data.py  prompts.py  rloo.py  train_sft.py
rl_sft/wandb/: latest-run
rl_sft/wandb/run-20250603_125440-ozh37nc8/: run-ozh37nc8.wandb
rl_sft/wandb/run-20250603_125440-ozh37nc8/files/: config.yaml  requirements.txt  wandb-metadata.json
rl_sft_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
