# pyproject.toml
[project]
name = "rl-sft-project"
version = "0.1.0"
description = "Supervised fine-tuning for default RL-for-LM final project"
requires-python = ">=3.11,<4.0"
dependencies = [
  "torch>=1.10",
  "transformers>=4.30.0",
  "datasets>=2.0.0",
  "evaluate>=0.4.0",
  "numpy",
  "tqdm",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
uv = "src.cli:cli"