# pyproject.toml
[project]
name = "rl-sft-project"
version = "0.1.0"
description = "Supervised fine-tuning for default RL-for-LM final project"
requires-python = ">=3.11,<4.0"
dependencies = [
  "torch>=1.10",
  "transformers>=4.30.0",
  "datasets>=2.0.0",
  "evaluate>=0.4.0",
  "numpy",
  "tqdm",
  "wandb>=0.19.11",
  "vllm>=0.9.0.1",
  "matplotlib>=3.10.3",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"



[tool.setuptools]
py-modules = ["smoltalk_dataloader", "train_sft"]
